2008-07-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/checkbranches.py: fixed checkbranches command to
	work with gnome-suites-x.yz as moduleset, and updated to use straight
	SVN URL instead of ViewVC.

	* modulesets/gnome-suites-2.22.modules: branched gnome-user-docs for
	GNOME 2.22.

2008-07-15  Sven Herzberg  <sven@imendio.com>

	Some debugging for autobuild and "distro" detection for osx

	* jhbuild/frontends/autobuild.py: some more debugging info
	* jhbuild/frontends/tinderbox.py: detect osx, too

2008-07-14  Cosimo Cecchi  <cosimoc@gnome.org>

	* modulesets/gnome-suites-2.22.modules:
	* modulesets/gnome-suites-2.24.modules:
	bug-buddy branched for 2.22.

2008-07-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/ant.py, modulesets/moduleset.dtd, doc/C/jhbuild.xml:
	added support for the Ant build tool.  (initial patch by David Schleef,
	closes: #537037)

2008-07-09  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.24.modules: added "yelp-webkit" from dedicated
	branch on svn.gnome.org.

2008-07-08  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.24.modules: updated vala to pull a tarball; as it
	needs itself to build from subversion.

2008-07-03  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.22.modules: gnome-keyring branched for
	2.22.

2008-07-03  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/sanitycheck.py, jhbuild/utils/cmds.py,
	jhbuild/versioncontrol/svn.py: added workaround against new default
	interactive behaviour of subversion 1.5.

2008-07-01  Marc-André Lureau  <marcandre.lureau@gmail.com>

	* doc/C/jhbuild.xml: Document the "list -a" option.

2008-07-01  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* jhbuild/commands/base.py (cmd_list.__init__): Add an option to
	list all modules.

	* contrib/jhbuild_completion.bash: Propose all modules for the
	completion.  Fixes: #540706

2008-07-01  Marc-Andre Lureau  <marcandre.lureau@gmail.com>
