@@ -1,3 +1,10 @@
+2008-07-17  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/commands/base.py, jhbuild/moduleset.py: fixed "module not
+	found" error messages to display the module that was not found, patch
+	by Behnam Esfahbod (closes: #543262); also cleaned up some conversion
+	of exceptions to strings.
+
 2008-07-16  Frederic Peters  <fpeters@0d.be>
 
 	* jhbuild/commands/checkbranches.py: fixed checkbranches command to
